--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -29,3 +29,25 @@
     text-align:center;
     line-height: 3;
 }
+
+/*mobile view*/
+@media(max-width:768px){
+
+    .about-title{
+        font-size: 45px;
+    }
+    .about-para{
+        font-size: 18px;
+        margin:10px;
+        padding:0;
+    }
+}
+
+/*tablet view*/
+@media(min-width:768px)and(max-width:1199px){
+    .about-para{
+        font-size: 30px;
+        padding:0;
+        margin:0;
+    }
+}
