--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -1,3 +1,4 @@
+
 .profile_pic{
     height: 470px;
     width: 370px;
@@ -65,4 +66,62 @@
     color: black; 
     border: 2px solid grey;
   }
+
+  /*mobile view */
+@media(max-width:768px){
+    .hero{
+        flex-direction: column;
+        text-align: center;
+        gap:20px;
+    }
+
+    .profile_pic{
+        width: 275px;
+        height: 300px;
+    }
+
+    .h1 span{
+        font-size: 22px;
+    }
+
+    .h1{
+        font-size: 22px;
+        margin-top: 50px;
+    }
+
+    .p{
+        font-size: 15px;
+    }
+
+    button {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+}
   
+/*tablet view*/
+@media( min-width:768px) and (max-width:1199px){
+    .hero{
+        flex-direction: row;
+        text-align: center;
+        gap:20px;
+    }
+
+    .profile_pic{
+        width: 300px;
+        height: 350px;
+    }
+
+    .h1{
+        font-size: 32px;
+    }
+
+    .p{
+        font-size: 22px;
+    }
+
+    button {
+        font-size: 20px;
+        padding: 10px 20px;
+    }
+}
