--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -13,8 +13,8 @@
     outline: none;
 }
 .skill-items{
-    margin:100px;
-    margin-bottom: 110px;
+    margin-left:100px;
+    margin-right: 50px;
 }
 
 .skill-items ul{
@@ -29,7 +29,7 @@
     width: 100px;
     border:1px solid grey;
     border-radius: 25px;
-    padding: 20px;;
+    padding: 20px;
 }
 
 .skill-items li{
@@ -43,4 +43,34 @@
     font-size: 20px;
     font-family: 'Lora';
     font-weight :600;
+}
+
+/*mobile view*/
+@media(max-width:768px){
+
+    .skill-title{
+        font-size: 45px;
+    }
+    .skill-items img{
+        height: 50px;
+        width:50px;
+    }
+
+    .skill-items p{
+        font-size: 15px;
+    }
+}
+
+@media(min-width:768px)and(max-width:1199px){
+    .skill-title{
+        font-size: 55px;
+    }
+    .skill-items img{
+        height: 75px;
+        width:75px;
+    }
+
+    .skill-items p{
+        font-size: 18px;
+    }
 }
