--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -26,7 +26,7 @@
     margin: 20px;
     font-size: 22px;
     font-family: 'Lora';
-    text-align:center;
+    text-align:justify;
     line-height: 3;
 }
 
@@ -40,6 +40,7 @@
         font-size: 18px;
         margin:10px;
         padding:0;
+        text-align:justify;
     }
 }
 
